@@ -27,6 +27,6 @@
 		
 		<for-model model="Invent"/>
 		
-	</tab>	
+	</tab>
 		
 </tabs-default-values>
